# kb-transcribe

./: .gitignore  README.md  pyproject.toml
kb_transcribe/: cli.py
